Agregando Hoja de Estilos

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" src="miEstilo.css"/>
 </head>
 <body>
     <h1>Este es el titulo de nuestro proyecto</h1>
     <p>Agregando primer parrafo</p>
+    
 </body>
 </html>
